force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Service_Practice_Match__c.field-meta.xml
<CustomField>
    <fullName>Service_Practice_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Practice Match?</label>
    <type>Checkbox</type>
</CustomField>