force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/User_Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Manager__c</fullName>
    <formula>OR($User.Id =  NVMStatsSF__Agent__c ,
$User.Id =  NVMStatsSF__Agent__r.Manager__c ,
$User.Id =   NVMStatsSF__Agent__r.Manager.Manager__c ,
$User.Id =   NVMStatsSF__Agent__r.Team_Lead__c ,
$Profile.Name == &quot;System Administrator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Manager</label>
    <type>Checkbox</type>
</CustomField>