force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <formula>NVMStatsSF__Agent__r.Manager.FirstName  + &apos; &apos; +   NVMStatsSF__Agent__r.Manager.LastName</formula>
    <label>Agent Manager</label>
    <type>Text</type>
</CustomField>