force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Zip_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zip_of_Contact__c</fullName>
    <formula>NVMStatsSF__Related_Contact__r.OtherPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip_of_Contact</label>
    <type>Text</type>
</CustomField>