force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/recordTypes/NVMStatsSF__Case.recordType-meta.xml
<RecordType>
    <fullName>NVMStatsSF__Case</fullName>
    <active>true</active>
    <label>Case</label>
</RecordType>