force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/recordTypes/NVMStatsSF__Inbound_Call.recordType-meta.xml
<RecordType>
    <fullName>NVMStatsSF__Inbound_Call</fullName>
    <active>true</active>
    <label>Inbound Call</label>
</RecordType>