force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/recordTypes/NVMStatsSF__Internal_Call.recordType-meta.xml
<RecordType>
    <fullName>NVMStatsSF__Internal_Call</fullName>
    <active>true</active>
    <description>Calls between Agents (outbound for one and inbound for the other)</description>
    <label>Internal Call</label>
</RecordType>