force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>NVMStatsSF__CallTime__c</columns>
    <columns>Insurance_Intake_Required__c</columns>
    <columns>NVMStatsSF__CallDisposition__c</columns>
    <columns>Call_Result_Subcategory__c</columns>
    <columns>Routed_to_Practice__c</columns>
    <columns>NVMStatsSF__Abandoned__c</columns>
    <columns>NVMStatsSF__Agent__c</columns>
    <columns>NVMStatsSF__Related_To__c</columns>
    <columns>NVMStatsSF__Handle_Time__c</columns>
    <columns>NVMStatsSF__NVM_Service_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
    <sharedTo>
        <group>Patient_Services_Report</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>