force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/listViews/All_Yesterday.listView-meta.xml
<ListView>
    <fullName>All_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>NVMStatsSF__CallTime__c</columns>
    <columns>NVMStatsSF__CallDisposition__c</columns>
    <columns>Call_Result_Subcategory__c</columns>
    <columns>NVMStatsSF__Agent__c</columns>
    <columns>NVMStatsSF__Related_To__c</columns>
    <columns>NVMStatsSF__Handle_Time__c</columns>
    <columns>NVMStatsSF__Task_Link__c</columns>
    <columns>NVMStatsSF__Consult_Time__c</columns>
    <columns>NVMStatsSF__NVM_Service_Name__c</columns>
    <columns>Queue_UCD_General__c</columns>
    <columns>Queue_UCD_Schedule_Assist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Yesterday</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>